Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-37739

Magma compaction has race condition when doing explicit compactions

    XMLWordPrintable

Details

    Description

      Magma has explicit compactions triggered by kvstore API call compactDB. It also has implicit compactions trigger by certain conditions within magma. Sometimes those implicit compactions can overlap with explicit compactions and pick up the compaction context. We need to make a copy of the compaction_ctx and when compactions see the compaction_ctx, they need to allocate their own copy of the eraserContext.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ben.huddleston Ben Huddleston
              scott.lashley Scott Lashley
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty