MB-37739: Refactor the usage of cachedVBStates and cachedMagmaInfo

cachedVBStates and cachedMagmaInfo should only be accessed by the BG
writer thread, all other accesses should be done by directly reading the
lasted copy from disk.

Change-Id: If088def2158fded366dc22c380cf0ec7b5188dde
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/124121
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>